Closed Bug 1530835 Opened 7 years ago Closed 7 years ago

Assertion failure: mStart <= mEnd (Invalid Interval), at src/dom/media/Intervals.h:48

Categories

(Core :: Audio/Video: Playback, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla67
Tracking Status
firefox-esr60 --- wontfix
firefox65 --- wontfix
firefox66 --- wontfix
firefox67 --- fixed

People

(Reporter: tsmith, Assigned: jya)

References

(Blocks 2 open bugs)

Details

(Keywords: assertion, crash, testcase)

Crash Data

Attachments

(2 files)

Attached video testcase.webm

Assertion failure: mStart <= mEnd (Invalid Interval), at src/dom/media/Intervals.h:48

#0 IsWaitingForKey src/dom/media/MediaFormatReader.h:408:14
#1 mozilla::MediaFormatReader::Update(mozilla::TrackInfo::TrackType) src/dom/media/MediaFormatReader.cpp:2443
#2 applyImpl<mozilla::MediaFormatReader, void (mozilla::MediaFormatReader::*)(mozilla::TrackInfo::TrackType), StoreCopyPassByConstLRef<mozilla::TrackInfo::TrackType> , 0> src/obj-firefox/dist/include/nsThreadUtils.h:1119:12
#3 apply<mozilla::MediaFormatReader, void (mozilla::MediaFormatReader::*)(mozilla::TrackInfo::TrackType)> src/obj-firefox/dist/include/nsThreadUtils.h:1125
#4 mozilla::detail::RunnableMethodImpl<mozilla::MediaFormatReader*, void (mozilla::MediaFormatReader::*)(mozilla::TrackInfo::TrackType), true, (mozilla::RunnableKind)0, mozilla::TrackInfo::TrackType>::Run() src/obj-firefox/dist/include/nsThreadUtils.h:1171
#5 mozilla::AutoTaskDispatcher::TaskGroupRunnable::Run() src/obj-firefox/dist/include/mozilla/TaskDispatcher.h:197:35
#6 mozilla::TaskQueue::Runner::Run() src/xpcom/threads/TaskQueue.cpp:199:12
#7 nsThreadPool::Run() src/xpcom/threads/nsThreadPool.cpp:241:14
#8 non-virtual thunk to nsThreadPool::Run() src/xpcom/threads/nsThreadPool.cpp
#9 nsThread::ProcessNextEvent(bool, bool*) src/xpcom/threads/nsThread.cpp:1162:14
#10 NS_ProcessNextEvent(nsIThread*, bool) src/xpcom/threads/nsThreadUtils.cpp:474:10
#11 mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate*) src/ipc/glue/MessagePump.cpp:303:20
#12 RunInternal src/ipc/chromium/src/base/message_loop.cc:315:10
#13 RunHandler src/ipc/chromium/src/base/message_loop.cc:308
#14 MessageLoop::Run() src/ipc/chromium/src/base/message_loop.cc:290
#15 nsThread::ThreadFunc(void*) src/xpcom/threads/nsThread.cpp:449:11
#16 _pt_root src/nsprpub/pr/src/pthreads/ptthread.c:201:5
Flags: in-testsuite?
See Also: → 1530897
Rank: 15
Priority: -- → P2
Crash Signature: [@ mozilla::MediaFormatReader::Update]

WebM specify that timestamp must be motonically increasing. Unfortunately, this is not always the case.

Assignee: nobody → jyavenard
Pushed by jyavenard@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/1712a35cd239 Set frame duration to 0 when out of order frames are seen. r=bryce
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla67
See Also: → 1531463

Can we land the testcase for this as a crashtest?

Flags: needinfo?(jyavenard)

will do so in bug 1531991

Flags: needinfo?(jyavenard)
Blocks: 1531991
See Also: → 1692582
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: