Bug 1530835 - Set frame duration to 0 when out of order frames are seen. r=bryce

WebM specify that timestamp must be monotonically increasing. Unfortunately, this is not always the case.

WebM doesn't have a concept of frame duration, the duration is calculated as being the delta between the next frame's time and the current one. So non-monotonically increasing timestamps would have caused negative duration.

Differential Revision: https://phabricator.services.mozilla.com/D21687